# microstructure-rl

./: .env.template  .gitignore  .gitmodules  pyproject.toml
configs/: binance_data.yaml  ingest_data.yaml  snap_reader.yaml
cpp/: CMakeLists.txt  CMakePresets.json  vcpkg.json
cpp/bench/: bench_replay.cpp
cpp/bindings/: CMakeLists.txt  microstructure_nb.cpp
cpp/cmake/: msrl_options.cmake  msrl_toolchain.cmake
cpp/core/: converter.cpp  replay.cpp
cpp/include/: replay.hpp  schema.hpp  sim.hpp  sim_lookup.hpp  sim_queue.hpp
cpp/md/: sim.cpp  sim_activate_set.cpp  sim_aggressive_fills.cpp  sim_bucket_index.cpp  sim_bucket_list.cpp  sim_fills.cpp  sim_orders.cpp  sim_passive_fills.cpp  sim_stp.cpp
cpp/tests/: test_sim.cpp
data/manifests/: bookdepth.json1
docs/components/: execution_contract.md
python/md/: ingest.py  snap_reader.py
python/microstructure-rl/: __init__.py
python/microstructure_rl/: __init__.py  __main__.py  artifacts.py  cli.py  fingerprint.py  invariants.py  markout.py  runner.py  spec.py
scripts/: README.md  capture_order_book.py  inspect_raw.py  load_env.ps1  sanity_check_snaps.py
